# cross-compile

./: CMakeLists.txt
binutils/: CMakeLists.txt
gcc/: CMakeLists.txt
gcc/cloog/: CMakeLists.txt
gcc/dirs/: CMakeLists.txt
gcc/gmp/: CMakeLists.txt
gcc/isl/: CMakeLists.txt
gcc/mpc/: CMakeLists.txt
gcc/mpfr/: CMakeLists.txt
glibc/: CMakeLists.txt
linux-kernel/: CMakeLists.txt
